@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "April 24, 2020" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "April 28, 2020" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -342,6 +342,13 @@ for
 \f(CW[\fP
 and
 \f(CW]\fP.
+.TP
+.BR \-\-east-const " | " \-E
+Turns on ``east const'' output
+where \f(CWconst\fP (and \f(CWvolatile\fP)
+are printed to the right
+(``east'')
+of the type.
 .TP
 .BR \-\-explain " | " \-e
 Assumes \f(CWexplain\fP
@@ -1382,6 +1389,13 @@ for
 \f(CW[\fP
 and
 \f(CW]\fP.
+.TP
+.RB [ no ] east-const
+Turns [off] ``east const'' output
+where \f(CWconst\fP (and \f(CWvolatile\fP)
+are printed to the right
+(``east'')
+of the type.
 .TP
 .RB [ no ] explain-by-default
 Turns [off] on \f(CWexplain\fP being assumed
