@@ -80,9 +80,11 @@ static help_text_t const HELP_TEXT_COMMANDS[] = {
   { "  exit | quit | q", SAME_AS_C },
   { "gibberish: a C declaration, like \"int x\"; or cast, like \"(int)x\"",
     "gibberish: a C++ declaration, like \"int x\"; or cast, like \"(int)x\"" },
-  { "option: [no]alt-tokens [no]debug {di|tri|no}graphs [no]explain-by-default",
+  { "option: [no]alt-tokens [no]debug {di|tri|no}graphs [no]east-const",
     SAME_AS_C },
-  { "        [no]explicit-int[=<types>] lang=<lang> [no]prompt [no]semicolon",
+  { "        [no]explain-by-default [no]explicit-int[=<types>] lang=<lang>",
+    SAME_AS_C },
+  { "        [no]prompt [no]semicolon",
     SAME_AS_C },
   { "lang: C K&R C89 C95 C99 C11 C18 C++ C++98 C++03 C++11 C++14 C++17 C++20",
     SAME_AS_C },
