@@ -53,6 +53,7 @@ extern char const  *opt_conf_file;      ///< Configuration file path.
 #ifdef ENABLE_CDECL_DEBUG
 extern bool         opt_debug;          ///< Generate JSON-like debug output?
 #endif /* ENABLE_CDECL_DEBUG */
+extern bool         opt_east_const;     ///< Print in "east const" form?
 extern bool         opt_explain;        ///< Assume `explain` if no command?
 extern char const  *opt_fin;            ///< File in path.
 extern char const  *opt_fout;           ///< File out path.
