@@ -1,0 +1,1 @@
+const struct S x;
