@@ -1,5 +1,6 @@
   noalt-tokens
   nodebug
+  noeast-const
   noexplain-by-default
   noexplicit-int
   nographs
