@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ -E @ declare x as const int @ 0
