@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ -E @ declare x as const struct S @ 0
