@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ @ declare x as const struct S @ 0
