@@ -1,0 +1,1 @@
+cdecl @ /dev/null @ -E @ declare x as const size_t @ 0
